noinst_LIBRARIES=liblog.a libcurlhtml.a libmyconf.a
liblog_a_SOURCES=log.cpp
libcurlhtml_a_SOURCES=curl_html.cpp
libmyconf_a_SOURCES=myconfig.cpp
#liblog_a_LIBADD=/usr/local/lib/liblog4cplus.a /usr/local/lib/libcurl.a
INCLUDES=-I$(top_srcdir)/src/include -I/usr/local/include
LIBS=-llog4cplus -lcurl
